--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,20 +1,32 @@
-{% extends 'base.html' %}
-{% block title %}Лента записей{% endblock %}
+{% extends "base.html" %}
+{% block title %}
+    Лента записей
+{% endblock %}
 {% block content %}
   <h1>Лента записей</h1>
-  <br>
-  {% for post in posts %}
-    <hr>
-    <article>
-      <ul>
-        <li>Место: {{ post.location }}</li>
-        <li>Дата: {{ post.date }}</li>
-        <li>
-          Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
-        </li>
-      </ul>
-      <p>{{ post.text|truncatewords:10 }}</p>
-      <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
-    </article>
-  {% endfor %}
+    {% for post in posts reversed %}
+      <hr>
+      <article>
+        <ul>
+          <li>
+            Место: {{ post.location }}
+          </li>
+          <li>
+            Дата: {{ post.date }}
+          </li>
+          <li>
+            Категория: 
+            <a href="{% url 'blog:category_posts' post.category %}">
+              {{ post.category }}
+            </a>
+          </li>
+        </ul>    
+        <p>
+          {{ post.text|truncatewords:10 }}
+        </p>
+        <a href="{% url 'blog:post_detail' post.id %}">
+          Читать полный текст
+        </a>
+      </article>
+    {% endfor %}
 {% endblock %}
