--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 {% load static %}
-<html lang="ru">
   <header>
     <nav class="navbar navbar-light" style="background-color: lightskyblue">
       <div class="container">
         <a class="navbar-brand" href="{% url 'blog:index' %}" title="На главную">
-          <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top"
+          <img src="{% static 'img/logo.png' %}" width="30" height="30" 
+               class="d-inline-block align-top"
                alt="Блогикум логотип">
           Блогикум
         </a>
